--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -1,5 +1,5 @@
 {% extends "blog/base.html" %}
-{% block title %}List Detail{% endblock %}
+{% block title %}Post Detail{% endblock %}
 {% block content %}
     <h1>
     <a href="{% url 'blog:post_list' %}">My Blog</a>
