--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -13,5 +13,9 @@
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
-    {% include "blog/pagination.html" with page=posts %}
+{#    В случае FBV #}
+{#    {% include "blog/pagination.html" with page=posts %}#}
+
+{#    Типовое представление ListView передает запрошенную страницу в переменную с именем page_obj #}
+    {% include "blog/pagination.html" with page=page_obj  %}
 {% endblock %}
