--- a/blog/templates/blog/post/share.html
+++ b/blog/templates/blog/post/share.html
@@ -13,7 +13,8 @@
         <form method="post">
             {{ form.as_p }}
             {% csrf_token %}
-            <input type="submit" value="Send e-mail">
+            <input type="submit" value="Отправить сообщение">
         </form>
+                <p><a href="{{ post.get_absolute_url }}">&#10094;&#10094;&#10094;&nbsp;  Обратно к посту</a></p>
     {% endif %}
 {% endblock %}
