--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -81,3 +81,11 @@ input[type=submit] {
     font-size: 12px;
     color: #666;
 }
+
+
+.tags {
+    color: blueviolet;
+    font-family: georgia, serif;
+    font-size: 16px;
+    font-style: italic;
+}
