--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -5,14 +5,29 @@
     {% for post in posts %}
         <h2>
 {#            <a href="{% url 'blog:post_detail' post.id %}"> {{ post.title }}</a>#}
-            <a href="{% url 'blog:post_detail' post.publish.year post.publish.month post.publish.day post.slug %}"> {{ post.title }}</a>
+            <a href="{% url 'blog:post_detail' post.publish.year post.publish.month post.publish.day post.slug %}">
+                {{ post.title }}
+            </a>
             <a href="{{ post.get_absolute_url }}"> {{ post.title }}</a>
         </h2>
+
+{#        <p class="tags">Tags: {{ post.tags.all|join:", " }}</p>#}
+             <p class="tags">
+            Tags:
+            {% for tag in post.tags.all %}
+                <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                    {{ tag.name }}
+                </a>
+                {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>
+
         <p class="date">
             Published {{ post.publish }} by {{ post.author }}
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
+
 {#    В случае FBV #}
 {#    {% include "blog/pagination.html" with page=posts %}#}
 
