--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -83,9 +83,9 @@ input[type=submit] {
 }
 
 
-.tags {
-    color: blueviolet;
-    font-family: georgia, serif;
-    font-size: 16px;
-    font-style: italic;
+p .tags {
+    color: #696969;
+    /*font-family: georgia, serif;*/
+    font-size: 1.2rem;
+    font-weight: bold;
 }
