--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,7 +1,9 @@
 {% extends "blog/base.html" %}
 {% block title %}Мой блог{% endblock %}
 {% block content %}
-    <h1>Мой блог</h1>
+    <h1>
+        <a href="{% url 'blog:post_list' %}">Мой блог</a>
+    </h1>
     {% for post in posts %}
         <h2>
 {#            <a href="{% url 'blog:post_detail' post.id %}"> {{ post.title }}</a>#}
@@ -12,10 +14,10 @@
         </h2>
 
 {#        <p class="tags">Tags: {{ post.tags.all|join:", " }}</p>#}
-             <p class="tags">
-            Tags:
+        <p>
+            Тэги:
             {% for tag in post.tags.all %}
-                <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                <a class="tags" href="{% url "blog:post_list_by_tag" tag.slug %}">
                     {{ tag.name }}
                 </a>
                 {% if not forloop.last %}, {% endif %}
@@ -28,9 +30,10 @@
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
 
-{#    В случае FBV #}
-{#    {% include "blog/pagination.html" with page=posts %}#}
-
+    {#    В случае CBV #}
 {#    Типовое представление ListView передает запрошенную страницу в переменную с именем page_obj #}
     {% include "blog/pagination.html" with page=page_obj  %}
+
+    {#    В случае FBV #}
+{#    {% include "blog/pagination.html" with page=posts %}#}
 {% endblock %}
