--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,3 +1,5 @@
+{% load blog_tags %}
+{% load blog_extras %}
 {% load static %}
 <!DOCTYPE html>
 <html>
@@ -12,7 +14,20 @@
 </div>
 <div id="sidebar">
     <h2>Блог о Django</h2>
-    <p>Полезная информация о фреймворке.</p>
+    <p>Полезная информация о фреймворке. Уже написано {% total_posts %} статей</p>
+
+    <h3>Последние статьи:</h3>
+    {% show_latest_posts 3 %}
+
+    <h3>Самые обсуждаемые статьи</h3>
+      {% get_most_commented_posts 3 as most_commented_posts %}
+      <ul>
+         {% for post in most_commented_posts %}
+         <li>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+         </li>
+         {% endfor %}
+      </ul>
 </div>
 </body>
 </html>
