--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,10 @@
 </div>
 <div id="sidebar">
     <h2>Блог о Django</h2>
-    <p>Полезная информация о фреймворке. Уже написано {% total_posts %} статей</p>
+    <p>Полезная информация о фреймворке. Уже написано {% total_posts %}
+        {#  Через переменную cnt передаем из одного тега в другой #}
+        {% total_posts as cnt %} {{ cnt|ru_plural:"статья, статьи, статей" }}
+    </p>
 
     <h3>Последние статьи:</h3>
     {% show_latest_posts 3 %}
