--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load blog_tags %}
 {% block title %}Мой блог{% endblock %}
 {% block content %}
     <h1>
@@ -27,7 +28,8 @@
         <p class="date">
             Published {{ post.publish }} by {{ post.author }}
         </p>
-        {{ post.body|truncatewords:30|linebreaks }}
+{#        {{ post.body|truncatewords:30|linebreaks }}#}
+        {{ post.body|markdown_tag|truncatewords_html:10 }}
     {% endfor %}
 
     {#    В случае CBV #}
