--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -3,7 +3,7 @@
 {% block title %}Мой блог{% endblock %}
 {% block content %}
     <h1>
-        <a href="{% url 'blog:post_list' %}">Мой блог</a>
+        Статьи
     </h1>
     {% for post in posts %}
         <h2>
