--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,5 @@
 {% extends "blog/base.html" %}
-{% block title %} Login {% endblock %}
+{% block title %} Вход в систему {% endblock %}
 {% block content %}
     <h2> Login </h2>
     <form method="post">
