--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,4 +7,5 @@
         {% csrf_token %}
         <p><input type="submit" value="Login"></p>
     </form>
+    <a href="{% url 'password_reset' %}">Сбросить пароль</a>
 {% endblock %}
