--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,10 +14,18 @@
         <a href="{% url 'blog:post_search' %}">Поиск статей</a> |
 {#        <a href="http://127.0.0.1:8000/admin/">admin</a> |#}
         <a href="{% url 'admin:index' %}">admin</a> |
+
         <a href="{% url 'accounts:signup' %}">Регистрация</a> |
         {% if user.is_authenticated %}
-        <a href="{% url 'password_reset' %}">Сбросить пароль</a>
+        <a href="{% url 'password_reset' %}">Сбросить пароль</a>|
         {% endif %}
+
+        {% if not user.is_authenticated %}
+        <a href="{% url 'login' %}">Войти</a> |
+        {% else %}
+        <a href="{% url 'logout' %}">Выйти</a> |
+        {% endif %}
+
     </h3>
 </div>
 <div id="content">
@@ -45,10 +53,10 @@
     {% if user.is_authenticated %}
         Привет {{ user.username }}!
 {#        # На Django 5.0 и выше  удалили выход из системы по запросу GET#}
-        <p><a href="{% url 'logout' %}">Log Out</a></p>
+        <p><a href="{% url 'logout' %}">Выйти</a></p>
     {% else %}
         <p>Войти в систему</p>
-        <a href="{% url 'login' %}">Log In</a>
+        <a href="{% url 'login' %}">Войти</a>
     {% endif %}
     <hr>
 
