--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,6 +3,7 @@
 {% block content %}
     <h2> Вход </h2>
     <a href="{% url 'social:begin' 'github' %}">Вход через GitHub</a>
+    <br><a href="{% url 'social:begin' 'google-oauth2' %}">Вход через Google</a>
     <form method="post">
         {{ form.as_p }}
         {% csrf_token %}
