--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -42,7 +42,8 @@
 {# Вариант вывода давности поста через собственный метод модели when_published#}
                 - (written {{ comment.when_published }})
             </p>
-            {{ comment.body|linebreaks }}
+{#            {{ comment.body|linebreaks }}#}
+            {{ comment.body|safe  }}
 
         </div>
     {% empty %}
