--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,77 +5,107 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+    {% load django_bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+
 </head>
 <body>
-<div>
-    <h3>
-        <a href="{% url 'blog:post_list' %}">Мой блог</a> |
-        <a href="{% url 'blog:post_search' %}">Поиск статей</a> |
+<!-- Responsive navbar-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">My First Blog Django 4</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
+                class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                {% if user.is_authenticated %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:users-profile' %}"><img
+                            class="rounded-circle" width="30" src="{{ user.profile.avatar.url }}"/> {{ user.username }}
+                    </a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Log Out</a></li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- Page all content-->
+<div class="container mt-5">
+    <div class="row">
+    <!-- lost posts -->
+        <div class="col-lg-8">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="container d-flex align-items-center justify-content-center">
+                        <div class="alert alert-warning alert-dismissible fade show w-50  d-block" role="alert">
+                            {{ message }}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% endif %}
 
-{#        <a href="http://127.0.0.1:8000/admin/">admin</a> |#}
-        <a href="{% url 'admin:index' %}">admin</a> |
-
-        <a href="{% url 'accounts:users-profile' %}">Профиль</a> |
-        <a href="{% url 'accounts:signup' %}">Регистрация</a> |
-        {% if user.is_authenticated %}
-        <a href="{% url 'password_change' %}">Изменить пароль</a>|
-        {% endif %}
-
-        {% if not user.is_authenticated %}
-        <a href="{% url 'login' %}">Войти</a> |
-        {% else %}
-        <a href="{% url 'logout' %}">Выйти</a> |
-        {% endif %}
-
-    </h3>
+            {% block content %}
+            {% endblock %}
+        </div>
+        <!-- right sidebar -->
+        <!-- Widgets-->
+        <div class="col-lg-4">
+            <div class="card mb-4">
+                <div class="card-header">Это мой личный блог.</div>
+                <div class="card-body">
+{#                    I've written {% total_posts %} posts so far.#}
+                    Уже написано {% total_posts %}
+                    {% total_posts as cnt %}
+                    {{ cnt|ru_plural:"статья, статьи, статей" }} на данный момент.
+                </div>
+            </div>
+            <!-- Search widget-->
+            <div class="card mb-4">
+                <div class="card-header">Найти</div>
+                <div class="card-body">
+                    <div class="input-group">
+                        <form action="/search/" method="get" class="input-group">
+                            <input type="text" name="query" class="form-control" placeholder="Enter search term..."
+                                   required="" id="id_query">
+                            <button class="btn btn-primary" id="button-search" type="submit">Go!</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- Latest posts widget-->
+            <div class="card mb-4">
+                <div class="list-group">
+                    <a class="list-group-item list-group-item-action active" aria-current="true">
+{#                        Latest posts#}
+                        Последние записи
+                    </a>
+                    {% show_latest_posts 3 %}
+                </div>
+            </div>
+            <div class="card mb-4">
+                <div class="list-group">
+                    <a class="list-group-item list-group-item-action active" aria-current="true">
+{#                        Most commented posts#}
+                        Самые комментируемые сообщения
+                    </a>
+                    {% get_most_commented_posts as most_commented_posts %}
+                    {% for post in most_commented_posts %}
+                        <a class="list-group-item list-group-item-action"
+                           href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<div id="content">
-
-{# Вывод сообщений #}
-{% if messages %}
-    {% for message in messages %}
-        {{ message.tags }} {{ message }}
-    {% endfor %}
-{% endif %}
-
-    {% block content %}
-    {% endblock %}
-</div>
-
-
-<div id="sidebar">
-    <h2>Блог о Django</h2>
-    <p>Полезная информация о фреймворке. Уже написано {% total_posts %}
-        {#  Через переменную cnt передаем из одного тега в другой #}
-        {% total_posts as cnt %} {{ cnt|ru_plural:"статья, статьи, статей" }}
-    </p>
-
-    <hr>
-    {% if user.is_authenticated %}
-        Привет {{ user.username }}!
-{#        # На Django 5.0 и выше  удалили выход из системы по запросу GET#}
-        <p><a href="{% url 'accounts:users-profile' %}">Профиль</a></p>
-        <p><a href="{% url 'logout' %}">Выйти</a></p>
-    {% else %}
-        <p>вы не авторизованы</p>
-        <a href="{% url 'login' %}">Войти</a>
-        <p><a href="{% url 'password_reset' %}">Сбросить пароль</a></p>
-    {% endif %}
-    <hr>
-
-    <h3>Последние статьи:</h3>
-    {% show_latest_posts 3 %}
-
-    <h3>Самые обсуждаемые статьи</h3>
-      {% get_most_commented_posts 3 as most_commented_posts %}
-      <ul>
-         {% for post in most_commented_posts %}
-         <li>
-            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-         </li>
-         {% endfor %}
-      </ul>
-</div>
+<!-- Footer-->
+<footer class="py-5 bg-dark mt-2">
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2024, Powered by
+        Django</p></div>
+</footer>
 </body>
 </html>
