--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -2,59 +2,55 @@
 {% load blog_extras %}
 {% load blog_tags %}
 
-{% block title %}Пост: {{ post.title|truncatechars:25 }} {% endblock %}
+{% block title %}{{ post.title|truncatechars:25 }}{% endblock %}
+
 {% block content %}
-    <h1>
-        Содержание статьи
-    </h1>
-    <p>{{ post.title }}</p>
-    <p>{{ post.body|markdown_tag }}</p>
-    <p>
-        <a href="{% url 'blog:post_share' post.id %}">
+    <h1 class="fw-bolder">{{ post.title }}</h1>
+    <p class="text-muted fst-italic mb-2 text-end">
+        Published {{ post.publish }} by {{ post.author }}
+    </p>
+    {{ post.body|markdown_tag }}
+    <div class="d-flex justify-content-end">
+        <a class="btn btn-primary float-left" href="{% url "blog:post_share" post.id %}">
+{#            Share this post#}
             Поделиться ссылкой на пост
         </a>
-    </p>
-
-{#    Список схожих постов #}
-    <h2>Похожие посты:</h2>
-    {% for post in similar_posts %}
-        <p>
-            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-        </p>
-    {% empty %}
-        There are no similar posts yet.
-    {% endfor %}
-
-
-    {% with comments.count as total_comments %}
-        <h2>
-{#            {{ total_comments }} comment{{ total_comments|pluralize }}#}
-            {{ total_comments }} {{ total_comments|ru_plural:"комментарий, комментария, комментариев" }}
-        </h2>
-    {% endwith %}
-
-    {% for comment in comments %}
-        <div class="comment">
-            <p class="info">
-                Комментарий {{ forloop.counter }} от {{ comment.name }}
-                &nbsp;&nbsp; {{ comment.created }}
-                &nbsp;&nbsp;(написано {{ comment.created|timesince }} &nbsp; назад)
-{# Вариант вывода давности поста через собственный метод модели when_published#}
-                - (written {{ comment.when_published }})
-            </p>
-{#            {{ comment.body|linebreaks }}#}
-            {{ comment.body|safe  }}
-
+    </div>
+    {% if similar_posts %}
+        <div class="row card mt-2">
+{#            <h2>Similar posts</h2>#}
+            <h2>Похожие посты</h2>
+            {% for post in similar_posts %}
+                <p>
+                    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                </p>
+            {% endfor %}
         </div>
-    {% empty %}
-        <p>Комментариев еще нет.</p>
-    {% endfor %}
-    <br>
-    <form method="get">
-        <button name="desc">По убыванию</button>
-        <button name="asc">По возрастанию</button>
-    </form>
+    {% endif %}
+    <div class="row card mt-2">
+        {% with comments.count as total_comments %}
+            <h2>
+{#                {{ total_comments }} comment{{ total_comments|pluralize }}#}
+            {{ total_comments }} {{ total_comments|ru_plural:"комментарий, комментария, комментариев" }}
+            </h2>
+            <hr class="mt-1 mb-1"/>
+        {% endwith %}
+        {% for comment in comments %}
 
-    {% include "blog/post/includes/comment_form.html" %}
+            <div class="comment">
+                <p class="text-muted fst-italic mb-2">
+                    Comment {{ forloop.counter }} by {{ comment.name }}
+                    {{ comment.created }}
+                </p>
+                {{ comment.body|safe }}
 
+            </div>
+            <hr class="mt-1 mb-1"/>
+        {% empty %}
+{#            <p>There are no comments.</p>#}
+            <p>Нет комментариев.</p>
+        {% endfor %}
+
+        {% include "blog/post/includes/comment_form.html" %}
+    </div>
 {% endblock %}
