--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,41 +1,31 @@
 {% extends "blog/base.html" %}
 {% load blog_tags %}
-{% block title %}Мой блог{% endblock %}
+
+{% block title %}My Blog{% endblock %}
+
 {% block content %}
-    <h1>
-        Статьи
-    </h1>
+    <h1>My Blog</h1>
+    {% if tag %}
+        <h2>Posts tagged with "{{ tag.name }}"</h2> {% endif %}
     {% for post in posts %}
-        <h2>
-{#            <a href="{% url 'blog:post_detail' post.id %}"> {{ post.title }}</a>#}
-            <a href="{% url 'blog:post_detail' post.publish.year post.publish.month post.publish.day post.slug %}">
+        <h2 class="fw-bolder">
+            <a href="{{ post.get_absolute_url }}">
                 {{ post.title }}
             </a>
-            <a href="{{ post.get_absolute_url }}"> {{ post.title }}</a>
         </h2>
-
-{#        <p class="tags">Tags: {{ post.tags.all|join:", " }}</p>#}
-        <p>
-            Тэги:
+            {% if post.tags.all %}
+            Tags:
             {% for tag in post.tags.all %}
-                <a class="tags" href="{% url "blog:post_list_by_tag" tag.slug %}">
+                <a class="badge bg-secondary text-decoration-none link-light" href="{% url "blog:post_list_by_tag" tag.slug %}">
                     {{ tag.name }}
                 </a>
                 {% if not forloop.last %}, {% endif %}
             {% endfor %}
-        </p>
-
-        <p class="date">
+        {% endif %}
+        <div class="text-muted fst-italic mb-2">
             Published {{ post.publish }} by {{ post.author }}
-        </p>
-{#        {{ post.body|truncatewords:30|linebreaks }}#}
-        {{ post.body|markdown_tag|truncatewords_html:10 }}
+        </div>
+        <div  class="mb-5">{{ post.body|markdown_tag|truncatewords_html:30 }}</div>
     {% endfor %}
-
-    {#    В случае CBV #}
-{#    Типовое представление ListView передает запрошенную страницу в переменную с именем page_obj #}
-{#    {% include "blog/pagination.html" with page=page_obj  %}#}
-
-    {#    В случае FBV #}
     {% include "blog/pagination.html" with page=posts %}
 {% endblock %}
