--- a/blog/templates/blog/post/search_old.html
+++ b/blog/templates/blog/post/search_old.html
@@ -7,33 +7,31 @@
 {% block content %}
     {% if query %}
         <h1>
-    {#        Posts containing "{{ query }}"#}
             Статьи, содержащие "{{ query }}"
         </h1>
         <h3>
             {% with results.count as total_results %}
-    {#            Found {{ total_results }} result{{ total_results|pluralize }} #}
+{#                Найдено {{ total_results }} result{{ total_results|pluralize }} {% endwith %}#}
                 Найдено {{ total_results }} {{ total_results|ru_plural:"результат, результата, результатов" }}
             {% endwith %}
         </h3>
-        <hr class="mt-1 mb-1"/>
         {% for post in results %}
             <h4>
                 <a href="{{ post.get_absolute_url }}"> {{ post.title }}
                 </a>
             </h4>
-            {{ post.body|markdown_tag|truncatewords_html:12 }} {% empty %}
-    {#        <p>There are no results for your query.</p>#}
-            <p>По вашему запросу нет результатов.</p>
+            {{ post.body|markdown_tag|truncatewords_html:12 }}
+            {% empty %}
+                <p>По вашему запросу нет результатов.</p>
         {% endfor %}
         <p><a href="{% url "blog:post_search" %}">Новый поиск</a></p>
     {% else %}
         <h1>
-            Search for posts
+            Поиск статей
         </h1>
         <form method="get">
-            {{ form.query }}
-            <input type="submit" value="Search" class="btn btn-primary mb-3 btn-lg">
+            {{ form.as_p }}
+            <input type="submit" value="Найти">
         </form>
     {% endif %}
 {% endblock %}
