--- a/accounts/templates/accounts/profile_old.html
+++ b/accounts/templates/accounts/profile_old.html
@@ -1,17 +1,24 @@
 {% extends "blog/base.html" %}
+
 {% block title %}Страница профиля{% endblock title %}
 {% block content %}
+{#    <div>#}
+{#        <h1>Это страница профиля для {{user.username}}</h1>#}
+{#    </div>#}
+
     <div>
-        <img src="{{ user.profile.avatar.url }}"/>
+        <img src="{{ user.profile.avatar.url }} " style="cursor: pointer;"/>
     </div>
     {% if user_form.errors %}
-        <div class="container d-flex align-items-center justify-content-center">
-            <div class="alert alert-warning alert-dismissible fade show w-50  d-block" role="alert">
+        <div role="alert">
+            <div>
                 {% for key, value in user_form.errors.items %}
                     <strong>{{ value }}</strong>
                 {% endfor %}
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
+            <button type="button" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
     {% endif %}
     <div class="form-content">
@@ -27,8 +34,7 @@
                         {{ user_form.email }}
                     </div>
                     <hr>
-                    <div><a class="text-decoration-none" href="{% url 'password_change' %}">Изменить пароль</a>
-
+                    <div><a href="{% url 'password_change' %}">Изменить пароль</a>
                         <hr>
                         <label>Change Avatar:</label>
                         {{ profile_form.avatar }}
@@ -37,8 +43,10 @@
                     <label>Bio:</label> {{ profile_form.bio }}
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary btn-lg">Сохранить изменения</button>
-            <button type="reset" class="btn btn-primary btn-lg">Обновить</button>
+            <br><br>
+            <button type="submit">Сохранить изменения</button>
+            <button type="reset">Обновить</button>
         </form>
     </div>
+
 {% endblock content %}
