--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -2,28 +2,27 @@
 {% block title %} Регистрация {% endblock %}
 {% block content %}
     <h2> Зарегистрироваться </h2>
-{#    блок отображения ошибок #}
+    {#    блок отображения ошибок #}
     {% if form.errors %}
-        <div style="display: table; margin: 0 auto; text-align: left;">
-            {% for key, value in form.errors.items %}
-                <strong>{{ value }}</strong>
-            {% endfor %}
+        <div class="container d-flex align-items-center justify-content-center">
+            <div class="alert alert-warning alert-dismissible fade show w-50  d-block" role="alert">
+                {% for key, value in form.errors.items %}
+                    <strong>{{ value }}</strong>
+                {% endfor %}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
         </div>
     {% endif %}
-{#    Поля формы #}
     <form method="post">
         {% csrf_token %}
-{#        {{ form.as_p }}#}
-        <p>Логин: {{ form.username }}</p>
-        <p>Email: {{ form.email }}</p>
-        <p>Имя: {{ form.first_name }}</p>
-        <p>Фамилия: {{ form.last_name }}</p>
-        <p>Пароль: {{ form.password1 }}
-            {{ form.errors.password }}</p>
-        <p>Повторить пароль: {{ form.password2 }}</p>
-        <p><input type="submit" value="Зарегистрироваться"></p>
+        Логин: {{ form.username }}
+        E-Mail:{{ form.email }}
+        Имя:{{ form.first_name }}
+        Фамилия: {{ form.last_name }}
+        Пароль: {{ form.password1 }}
+        {{ form.errors.password }}
+        Повторить пароль: {{ form.password2 }}
+        <button type="submit" class="btn btn-primary btn-lg">Зарегистрироваться</button>
     </form>
-
-{#    <a href="/accounts/login/">Имеется аккаунт? Перейти к входу</a>#}
-    <a href="{% url 'login' %}">Имеется аккаунт? Перейти к входу</a>
+    <a href="/accounts/login/">Имеется аккаунт? Перейти к входу.</a>
 {% endblock %}
